minor changes fixes

--- a/static-site/index.html
+++ b/static-site/index.html
@@ -54,7 +54,7 @@
                     </p>
 
                     <p class="current-role">
-                        Currently, I’m a Backend Engineer at Adden.AI, where I design and build scalable, ML-powered systems using large language models. This role has deepened my expertise in distributed system design, real-time data processing, and integrating machine learning models into production workflows. I’ve worked extensively on performance optimization, API design, and infrastructure scaling, while collaborating across teams to deliver reliable, AI-driven products that handle complex ad tech data and logic at scale.
+                        Currently, I’m a Founding Backend AI Engineer at Adden.AI, where I design and build scalable, ML-powered systems using large language models. This role has deepened my expertise in distributed system design, real-time data processing, and integrating machine learning models into production workflows. I’ve worked extensively on performance optimization, API design, and infrastructure scaling, while collaborating across teams to deliver reliable, AI-driven products that handle complex ad tech data and logic at scale.
                     </p>
 
                     <p class="past-experience">
@@ -71,7 +71,7 @@
                 <div class="experience-item animate-on-scroll">
                     <div class="experience-date">2024 — PRESENT</div>
                     <div class="experience-content">
-                        <h3 class="experience-title">Backend Engineer - Industrial · <span class="company">Adden.AI</span> <a href="https://www.adden.ai/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt external-link"></i></a></h3>
+                        <h3 class="experience-title">Founding Backend AI Engineer <span class="company">Adden.AI</span> <a href="https://www.adden.ai/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt external-link"></i></a></h3>
                         <div class="date">May 2024 — Present</div>
                         <p class="experience-description">
                             Design and develop intelligent, scalable backend systems powered by LLMs and machine learning. Built Reporting AI to automate multi-platform ad reporting with real-time dashboards and KPI tracking. Developed Smart Audience AI for predictive audience targeting using deep neural networks and multi-source data analysis. Created Monitoring AI to provide real-time anomaly detection, alerts, and AI-driven root-cause analysis for campaign performance. Engineered Budget AI to reduce advertising cost-per-response by dynamically reallocating spend based on performance insights. Built Custom Audience AI to enhance lead quality and conversion rates by activating enriched contact data for pre-outreach ad delivery.
@@ -91,10 +91,10 @@
                 </div>
 
                 <div class="experience-item animate-on-scroll">
-                    <div class="experience-date">2024 — 2024</div>
+                    <div class="experience-date">2023 — 2024</div>
                     <div class="experience-content">
-                        <h3 class="experience-title">Undergraduate Research Intern - Research · <span class="company">MIDAS</span> <a href="https://midas.iiitd.ac.in/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt external-link"></i></a></h3>
-                        <div class="date">May 2024 — Dec 2024</div>
+                        <h3 class="experience-title">Undergraduate Researcher <span class="company">MIDAS</span> <a href="https://midas.iiitd.ac.in/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt external-link"></i></a></h3>
+                        <div class="date">August 2023 — December 2024</div>
                         <p class="experience-description">
                             Developed an end-to-end voice chatbot which transcribed audio, generated embeddings with LangChain, stored in ChromaDB, processed inquiries and converted back to speech for seamless user interaction.<br><br>
                             Introduced and created GeoVQA, a multimodal math dataset, to enhance LLMs capabilities in geometry. Fine-tuned LLaVA models, achieving superior performance over GPT-4 on the PGPS9K benchmark.<br><br>
