--- a/archive.html
+++ b/archive.html
@@ -145,8 +145,8 @@
                 <tbody>
                     <tr>
                         <td>2024</td>
-                        <td>AI-Powered Threat Detection System</td>
-                        <td>Python, FastAPI, Kubernetes, TensorFlow, PostgreSQL, Redis</td>
+                        <td>Secure Property Rental/Sale Website</td>
+                        <td>FastAPI, SQLAlchemy, PostgreSQL, Next.js, React, Google OAuth, Tailwind CSS, Solidity (Ethereum)</td>
                         <td class="project-links">
                             <a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
