--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </p>
 
                     <p class="current-role">
-                        Currently, I’m a Backend Engineer at Adden.AI, where I design and build scalable, ML-powered systems using large language models. This role has deepened my expertise in distributed system design, real-time data processing, and integrating machine learning models into production workflows. I’ve worked extensively on performance optimization, API design, and infrastructure scaling, while collaborating across teams to deliver reliable, AI-driven products that handle complex ad tech data and logic at scale.
+                        Currently, I’m a Founding Backend AI Engineer at Adden.AI, where I design and build scalable, ML-powered systems using large language models. This role has deepened my expertise in distributed system design, real-time data processing, and integrating machine learning models into production workflows. I’ve worked extensively on performance optimization, API design, and infrastructure scaling, while collaborating across teams to deliver reliable, AI-driven products that handle complex ad tech data and logic at scale.
                     </p>
 
                     <p class="past-experience">
@@ -71,7 +71,7 @@
                 <div class="experience-item animate-on-scroll">
                     <div class="experience-date">2024 — PRESENT</div>
                     <div class="experience-content">
-                        <h3 class="experience-title">Backend Engineer - Industrial · <span class="company">Adden.AI</span> <a href="https://www.adden.ai/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt external-link"></i></a></h3>
+                        <h3 class="experience-title">Founding Backend AI Engineer <span class="company">Adden.AI</span> <a href="https://www.adden.ai/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt external-link"></i></a></h3>
                         <div class="date">May 2024 — Present</div>
                         <p class="experience-description">
                             Design and develop intelligent, scalable backend systems powered by LLMs and machine learning. Built Reporting AI to automate multi-platform ad reporting with real-time dashboards and KPI tracking. Developed Smart Audience AI for predictive audience targeting using deep neural networks and multi-source data analysis. Created Monitoring AI to provide real-time anomaly detection, alerts, and AI-driven root-cause analysis for campaign performance. Engineered Budget AI to reduce advertising cost-per-response by dynamically reallocating spend based on performance insights. Built Custom Audience AI to enhance lead quality and conversion rates by activating enriched contact data for pre-outreach ad delivery.
@@ -91,10 +91,10 @@
                 </div>
 
                 <div class="experience-item animate-on-scroll">
-                    <div class="experience-date">2024 — 2024</div>
+                    <div class="experience-date">2023 — 2024</div>
                     <div class="experience-content">
-                        <h3 class="experience-title">Undergraduate Research Intern - Research · <span class="company">MIDAS</span> <a href="https://midas.iiitd.ac.in/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt external-link"></i></a></h3>
-                        <div class="date">May 2024 — Dec 2024</div>
+                        <h3 class="experience-title">Undergraduate Researcher <span class="company">MIDAS</span> <a href="https://midas.iiitd.ac.in/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt external-link"></i></a></h3>
+                        <div class="date">August 2023 — December 2024</div>
                         <p class="experience-description">
                             Developed an end-to-end voice chatbot which transcribed audio, generated embeddings with LangChain, stored in ChromaDB, processed inquiries and converted back to speech for seamless user interaction.<br><br>
                             Introduced and created GeoVQA, a multimodal math dataset, to enhance LLMs capabilities in geometry. Fine-tuned LLaVA models, achieving superior performance over GPT-4 on the PGPS9K benchmark.<br><br>
@@ -121,47 +121,56 @@
 
             <section id="projects" class="projects-section">
                 <div class="project-item animate-on-scroll">
-                    <h3 class="project-title">AI-Powered Threat Detection System</h3>
-                    <p class="project-description">
-                        A scalable backend system that uses machine learning algorithms to detect security threats in real-time across distributed cloud environments. Implemented with a microservices architecture and containerized deployment.
-                    </p>
+                    <h3 class="project-title">Secure Property Rental/Sale Website</h3>
+                    <div class="project-description">
+                        <div class="short-description">
+                            A secure web application for property transactions with distinct buyer and seller interfaces.
+                        </div>
+                    </div>
                     <div class="technologies">
-                        <span class="tech-tag">Python</span>
                         <span class="tech-tag">FastAPI</span>
-                        <span class="tech-tag">Kubernetes</span>
-                        <span class="tech-tag">TensorFlow</span>
+                        <span class="tech-tag">SQLAlchemy</span>
                         <span class="tech-tag">PostgreSQL</span>
-                        <span class="tech-tag">Redis</span>
+                        <span class="tech-tag">Next.js</span>
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">Solidity</span>
+                        <span class="tech-tag">Ethereum</span>
+                        <span class="tech-tag">Tailwind CSS</span>
                     </div>
                 </div>
 
                 <div class="project-item animate-on-scroll">
-                    <h3 class="project-title">Automated Security Compliance Platform</h3>
-                    <p class="project-description">
-                        A platform that automates security compliance checks across multi-cloud environments using infrastructure as code. Features custom policy enforcement, remediation workflows, and comprehensive reporting dashboards.
-                    </p>
+                    <h3 class="project-title">WikiEase - Android Mobile Application</h3>
+                    <div class="project-description">
+                        <div class="short-description">
+                            Android app integrating Wikipedia content with AI-powered summarization for faster, smarter reading.
+                        </div>
+                    </div>
                     <div class="technologies">
-                        <span class="tech-tag">Terraform</span>
-                        <span class="tech-tag">Go</span>
-                        <span class="tech-tag">AWS CDK</span>
-                        <span class="tech-tag">Lambda</span>
-                        <span class="tech-tag">EventBridge</span>
-                        <span class="tech-tag">Grafana</span>
+                        <span class="tech-tag">Kotlin</span>
+                        <span class="tech-tag">Jetpack Compose</span>
+                        <span class="tech-tag">Room</span>
+                        <span class="tech-tag">Coroutines</span>
+                        <span class="tech-tag">Wikipedia API</span>
+                        <span class="tech-tag">OpenAI API</span>
                     </div>
                 </div>
 
                 <div class="project-item animate-on-scroll">
-                    <h3 class="project-title">ML-Powered API Gateway</h3>
-                    <p class="project-description">
-                        A secure API gateway with integrated machine learning for intelligent request routing, automatic rate limiting, and anomaly detection. Includes real-time monitoring and adaptive security controls.
-                    </p>
+                    <h3 class="project-title">Mood-Based Song Classifier and Recommender System</h3>
+                    <div class="project-description">
+                        <div class="short-description">
+                            ML pipeline that infers user mood from listening history and recommends contextually aligned songs.
+                        </div>
+                    </div>
                     <div class="technologies">
                         <span class="tech-tag">Python</span>
-                        <span class="tech-tag">FastAPI</span>
-                        <span class="tech-tag">Docker</span>
                         <span class="tech-tag">PyTorch</span>
-                        <span class="tech-tag">Prometheus</span>
-                        <span class="tech-tag">Envoy</span>
+                        <span class="tech-tag">Scikit-learn</span>
+                        <span class="tech-tag">XGBoost</span>
+                        <span class="tech-tag">NumPy</span>
+                        <span class="tech-tag">Pandas</span>
+                        <span class="tech-tag">Spotify API</span>
                     </div>
                 </div>
                 <div class="view-more-projects">
