--- a/static-site/index.html
+++ b/static-site/index.html
@@ -121,47 +121,56 @@
 
             <section id="projects" class="projects-section">
                 <div class="project-item animate-on-scroll">
-                    <h3 class="project-title">AI-Powered Threat Detection System</h3>
-                    <p class="project-description">
-                        A scalable backend system that uses machine learning algorithms to detect security threats in real-time across distributed cloud environments. Implemented with a microservices architecture and containerized deployment.
-                    </p>
+                    <h3 class="project-title">Secure Property Rental/Sale Website</h3>
+                    <div class="project-description">
+                        <div class="short-description">
+                            A secure web application for property transactions with distinct buyer and seller interfaces.
+                        </div>
+                    </div>
                     <div class="technologies">
-                        <span class="tech-tag">Python</span>
                         <span class="tech-tag">FastAPI</span>
-                        <span class="tech-tag">Kubernetes</span>
-                        <span class="tech-tag">TensorFlow</span>
+                        <span class="tech-tag">SQLAlchemy</span>
                         <span class="tech-tag">PostgreSQL</span>
-                        <span class="tech-tag">Redis</span>
+                        <span class="tech-tag">Next.js</span>
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">Solidity</span>
+                        <span class="tech-tag">Ethereum</span>
+                        <span class="tech-tag">Tailwind CSS</span>
                     </div>
                 </div>
 
                 <div class="project-item animate-on-scroll">
-                    <h3 class="project-title">Automated Security Compliance Platform</h3>
-                    <p class="project-description">
-                        A platform that automates security compliance checks across multi-cloud environments using infrastructure as code. Features custom policy enforcement, remediation workflows, and comprehensive reporting dashboards.
-                    </p>
+                    <h3 class="project-title">WikiEase - Android Mobile Application</h3>
+                    <div class="project-description">
+                        <div class="short-description">
+                            Android app integrating Wikipedia content with AI-powered summarization for faster, smarter reading.
+                        </div>
+                    </div>
                     <div class="technologies">
-                        <span class="tech-tag">Terraform</span>
-                        <span class="tech-tag">Go</span>
-                        <span class="tech-tag">AWS CDK</span>
-                        <span class="tech-tag">Lambda</span>
-                        <span class="tech-tag">EventBridge</span>
-                        <span class="tech-tag">Grafana</span>
+                        <span class="tech-tag">Kotlin</span>
+                        <span class="tech-tag">Jetpack Compose</span>
+                        <span class="tech-tag">Room</span>
+                        <span class="tech-tag">Coroutines</span>
+                        <span class="tech-tag">Wikipedia API</span>
+                        <span class="tech-tag">OpenAI API</span>
                     </div>
                 </div>
 
                 <div class="project-item animate-on-scroll">
-                    <h3 class="project-title">ML-Powered API Gateway</h3>
-                    <p class="project-description">
-                        A secure API gateway with integrated machine learning for intelligent request routing, automatic rate limiting, and anomaly detection. Includes real-time monitoring and adaptive security controls.
-                    </p>
+                    <h3 class="project-title">Mood-Based Song Classifier and Recommender System</h3>
+                    <div class="project-description">
+                        <div class="short-description">
+                            ML pipeline that infers user mood from listening history and recommends contextually aligned songs.
+                        </div>
+                    </div>
                     <div class="technologies">
                         <span class="tech-tag">Python</span>
-                        <span class="tech-tag">FastAPI</span>
-                        <span class="tech-tag">Docker</span>
                         <span class="tech-tag">PyTorch</span>
-                        <span class="tech-tag">Prometheus</span>
-                        <span class="tech-tag">Envoy</span>
+                        <span class="tech-tag">Scikit-learn</span>
+                        <span class="tech-tag">XGBoost</span>
+                        <span class="tech-tag">NumPy</span>
+                        <span class="tech-tag">Pandas</span>
+                        <span class="tech-tag">Spotify API</span>
                     </div>
                 </div>
                 <div class="view-more-projects">
